src/Eg2.java
/* Generated By:JJTree&JavaCC: Do not edit this line. Eg2.java */
/** An Arithmetic Grammar. */
//package Parser;

public class Eg2/*@bgen(jjtree)*/implements Eg2TreeConstants, Eg2Constants {/*@bgen(jjtree)*/
  protected JJTEg2State jjtree = new JJTEg2State();
  /** Main entry point. */
  public static void main(String args[]) {
    System.out.println("Reading from standard input...");
    Eg2 t = new Eg2(System.in);
    try {
      ASTStart n = t.Start();
      n.dump("");
      System.out.println("Thank you.");
    } catch (Exception e) {
      System.out.println("Oops.");
      System.out.println(e.getMessage());
      e.printStackTrace();
    }
  }

/** Main production. */
  final public ASTStart Start() throws ParseException {
                    /*@bgen(jjtree) Start */
  ASTStart jjtn000 = new ASTStart(JJTSTART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case STRUCT:
          StructDeclaration();
          break;
        default:
          jj_la1[0] = jj_gen;
          if (jj_2_1(3)) {
            FunctionDeclarator();
          } else if (jj_2_2(3)) {
            UniversalDeclarator();
          } else {
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case STRUCT:
        case VARIABLE_TYPE:
        case CONST:
        case VOID:
          ;
          break;
        default:
          jj_la1[1] = jj_gen;
          break label_1;
        }
      }
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

/** ************Declarations*************** .*/

/** array initializer. */
  final public void ArrayInitializer() throws ParseException {
                           /*@bgen(jjtree) ArrayInitializer */
  ASTArrayInitializer jjtn000 = new ASTArrayInitializer(JJTARRAYINITIALIZER);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Expression();
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 42:
          ;
          break;
        default:
          jj_la1[2] = jj_gen;
          break label_2;
        }
        jj_consume_token(42);
        Expression();
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void UniversalDeclarator() throws ParseException {
                              /*@bgen(jjtree) UniversalDeclarator */
  ASTUniversalDeclarator jjtn000 = new ASTUniversalDeclarator(JJTUNIVERSALDECLARATOR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CONST:
        jj_consume_token(CONST);
        break;
      default:
        jj_la1[3] = jj_gen;
        ;
      }
      jj_consume_token(VARIABLE_TYPE);
      MyID();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ASSIGNMENT_EQUAL_OPERATOR:
      case 43:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ASSIGNMENT_EQUAL_OPERATOR:
          jj_consume_token(ASSIGNMENT_EQUAL_OPERATOR);
          Expression();
          break;
        case 43:
          jj_consume_token(43);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case INTEGER_LITERAL:
            jj_consume_token(INTEGER_LITERAL);
            break;
          default:
            jj_la1[4] = jj_gen;
            ;
          }
          jj_consume_token(44);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case ASSIGNMENT_EQUAL_OPERATOR:
            jj_consume_token(ASSIGNMENT_EQUAL_OPERATOR);
            jj_consume_token(45);
            ArrayInitializer();
            jj_consume_token(46);
            break;
          default:
            jj_la1[5] = jj_gen;
            ;
          }
          break;
        default:
          jj_la1[6] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[7] = jj_gen;
        ;
      }
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 42:
          ;
          break;
        default:
          jj_la1[8] = jj_gen;
          break label_3;
        }
        jj_consume_token(42);
        MyID();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ASSIGNMENT_EQUAL_OPERATOR:
        case 43:
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case ASSIGNMENT_EQUAL_OPERATOR:
            jj_consume_token(ASSIGNMENT_EQUAL_OPERATOR);
            Expression();
            break;
          case 43:
            jj_consume_token(43);
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case INTEGER_LITERAL:
              jj_consume_token(INTEGER_LITERAL);
              break;
            default:
              jj_la1[9] = jj_gen;
              ;
            }
            jj_consume_token(44);
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case ASSIGNMENT_EQUAL_OPERATOR:
              jj_consume_token(ASSIGNMENT_EQUAL_OPERATOR);
              jj_consume_token(45);
              ArrayInitializer();
              jj_consume_token(46);
              break;
            default:
              jj_la1[10] = jj_gen;
              ;
            }
            break;
          default:
            jj_la1[11] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          break;
        default:
          jj_la1[12] = jj_gen;
          ;
        }
      }
      jj_consume_token(47);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/** struct declaration. */
  final public void StructDeclaration() throws ParseException {
                            /*@bgen(jjtree) StructDeclaration */
  ASTStructDeclaration jjtn000 = new ASTStructDeclaration(JJTSTRUCTDECLARATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(STRUCT);
      MyID();
      StructBody();
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/** struct body. */
  final public void StructBody() throws ParseException {
                     /*@bgen(jjtree) StructBody */
  ASTStructBody jjtn000 = new ASTStructBody(JJTSTRUCTBODY);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(45);
      StructDeclarations();
      jj_consume_token(46);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/** struct declarations. */
  final public void StructDeclarations() throws ParseException {
                             /*@bgen(jjtree) StructDeclarations */
  ASTStructDeclarations jjtn000 = new ASTStructDeclarations(JJTSTRUCTDECLARATIONS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case VARIABLE_TYPE:
        case CONST:
          ;
          break;
        default:
          jj_la1[13] = jj_gen;
          break label_4;
        }
        StructParameter();
      }
    } catch (Throwable jjte000) {
            if (jjtc000) {
              jjtree.clearNodeScope(jjtn000);
              jjtc000 = false;
            } else {
              jjtree.popNode();
            }
            if (jjte000 instanceof RuntimeException) {
              {if (true) throw (RuntimeException)jjte000;}
            }
            if (jjte000 instanceof ParseException) {
              {if (true) throw (ParseException)jjte000;}
            }
            {if (true) throw (Error)jjte000;}
    } finally {
            if (jjtc000) {
              jjtree.closeNodeScope(jjtn000, true);
            }
    }
  }

/** struct parameter. */
  final public void StructParameter() throws ParseException {
                          /*@bgen(jjtree) StructParameter */
  ASTStructParameter jjtn000 = new ASTStructParameter(JJTSTRUCTPARAMETER);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      UniversalDeclarator();
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/** function declarator. */
  final public void FunctionDeclarator() throws ParseException {
                             /*@bgen(jjtree) FunctionDeclarator */
  ASTFunctionDeclarator jjtn000 = new ASTFunctionDeclarator(JJTFUNCTIONDECLARATOR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VOID:
        jj_consume_token(VOID);
        break;
      case VARIABLE_TYPE:
        jj_consume_token(VARIABLE_TYPE);
        break;
      default:
        jj_la1[14] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      MyID();
      jj_consume_token(48);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VARIABLE_TYPE:
      case CONST:
        FunctionParameterList();
        break;
      default:
        jj_la1[15] = jj_gen;
        ;
      }
      jj_consume_token(49);
      FunctionBody();
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/** function parameter list. */
  final public void FunctionParameterList() throws ParseException {
                                /*@bgen(jjtree) FunctionParameterList */
  ASTFunctionParameterList jjtn000 = new ASTFunctionParameterList(JJTFUNCTIONPARAMETERLIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      FunctionParameter();
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 42:
          ;
          break;
        default:
          jj_la1[16] = jj_gen;
          break label_5;
        }
        jj_consume_token(42);
        FunctionParameter();
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/** function parameter. */
  final public void FunctionParameter() throws ParseException {
                            /*@bgen(jjtree) FunctionParameter */
  ASTFunctionParameter jjtn000 = new ASTFunctionParameter(JJTFUNCTIONPARAMETER);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CONST:
        jj_consume_token(CONST);
        break;
      default:
        jj_la1[17] = jj_gen;
        ;
      }
      jj_consume_token(VARIABLE_TYPE);
      MyID();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ASSIGNMENT_EQUAL_OPERATOR:
      case 43:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ASSIGNMENT_EQUAL_OPERATOR:
          jj_consume_token(ASSIGNMENT_EQUAL_OPERATOR);
          Expression();
          break;
        case 43:
          jj_consume_token(43);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case INTEGER_LITERAL:
            jj_consume_token(INTEGER_LITERAL);
            break;
          default:
            jj_la1[18] = jj_gen;
            ;
          }
          jj_consume_token(44);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case ASSIGNMENT_EQUAL_OPERATOR:
            jj_consume_token(ASSIGNMENT_EQUAL_OPERATOR);
            jj_consume_token(45);
            ArrayInitializer();
            jj_consume_token(46);
            break;
          default:
            jj_la1[19] = jj_gen;
            ;
          }
          break;
        default:
          jj_la1[20] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[21] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/** function body. */
  final public void FunctionBody() throws ParseException {
                       /*@bgen(jjtree) FunctionBody */
  ASTFunctionBody jjtn000 = new ASTFunctionBody(JJTFUNCTIONBODY);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(45);
      BlockStatements();
      jj_consume_token(46);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/** ************block*************** .*/

/** A block. */
  final public void Block() throws ParseException {
                /*@bgen(jjtree) Block */
  ASTBlock jjtn000 = new ASTBlock(JJTBLOCK);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 45:
        jj_consume_token(45);
        BlockStatements();
        jj_consume_token(46);
        break;
      case IF:
      case FOR:
      case WHILE:
      case FOREACH:
      case BREAK:
      case CONTINUE:
      case RETURN:
      case INTEGER_LITERAL:
      case LITERAL:
      case IDENTIFIER:
      case 47:
      case 48:
      case 65:
      case 66:
      case 70:
      case 71:
      case 72:
      case 73:
        Statement();
        break;
      default:
        jj_la1[22] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/** block statements. */
  final public void BlockStatements() throws ParseException {
                          /*@bgen(jjtree) BlockStatements */
  ASTBlockStatements jjtn000 = new ASTBlockStatements(JJTBLOCKSTATEMENTS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IF:
        case FOR:
        case WHILE:
        case FOREACH:
        case BREAK:
        case CONTINUE:
        case RETURN:
        case VARIABLE_TYPE:
        case CONST:
        case INTEGER_LITERAL:
        case LITERAL:
        case IDENTIFIER:
        case 47:
        case 48:
        case 65:
        case 66:
        case 70:
        case 71:
        case 72:
        case 73:
          ;
          break;
        default:
          jj_la1[23] = jj_gen;
          break label_6;
        }
        BlockStatement();
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }
